Gif de tutorial some + Ajustes no autolayout e tradução na tela inicial

--- a/FicaFrio/en.lproj/Localizable.strings
+++ b/FicaFrio/en.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 */
 
 "Insira sua meta" = "Insert your goal";
+"Nova Meta" = "New Goal";
 
 "Divida sua meta em três passos e não esqueça de escolher uma tag para cada um deles!" = "Break down your goal into three steps and don’t forget to pick one tag for each!";
 "Digite sua tarefa" = "Type your task";
